fix: increase z-index in article-title block

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -262,6 +262,8 @@
 }
 
 .article-title {
+  position: relative;
+  z-index: 1;
   display: block;
   margin: 100px 0 20px;
   padding: 6px 10px 4px;
